<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/qrcode"
            android:title="@string/menu_qr" />
        <item
            android:id="@+id/nav_remote"
            android:icon="@drawable/remote_"
            android:title="@string/menu_remote" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/menu_help" />

    </group>
</menu>
